[AOD-523] Fix dropdown menu z-index issue

--- a/app/components/Dropdown/Dropdown.scss
+++ b/app/components/Dropdown/Dropdown.scss
@@ -3,7 +3,7 @@
 .Dropdown {
   height: 100%;
   position: relative;
-  z-index: 1;
+  z-index: z(dropdown);
 
   &:focus {
     outline: none;
